sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: '(' expected but identifier found.
		if plusPetit(k,k+1){
                   ^AlgCocktailSort1:22: error: illegal start of simple expression
	}
        ^